--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "bcrypt": "^5.0.1",
       "body-parser": "^1.19.1",
       "concurrently": "^7.0.0",
       "connect-mongo": "^4.6.0",
