--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "uuidv4": "^5.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
